<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Proyecto3</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_exercise">ExerciseActivity</string>
    <string name="no_cheese">There is no cheese!</string>
    <string name="finish_exercise">Ejercicio terminado!</string>
    <string name="cancel_exercise">Cancelar</string>

    <string-array name="dummy_statements">
        <item>System.out.println("Hello world");</item>
        <item>}</item>
        <item>public static void main(String[] args){</item>
    </string-array>

    <string name="default_server">http://mobileservice.site40.net/api</string>
    <string name="default_api_get_exercise">/ejercicio</string>
    <string name="default_api_send_exercise">/ejercicio</string>
    <string name="matricula_description">Matrícula</string>
    <string name="name_description">Nombre</string>
    <string name="degree_description">Licenciatura</string>
    <string name="exercise_description">Ejercicio: </string>
    <string name="play_description">Jugar</string>
    <string name="exercise">Ejercicio</string>
    <string name="exercise_dummy_description">Banana banana banana banana banana</string>
    <string name="exercise_answer_comments">Comentarios</string>
    <string name="start">Iniciar</string>
    <string name="schedule">Calendarizar</string>
    <string name="send_exercise">Enviar Respuesta</string>
    
    <string name="dropbox">"DropBox"</string>
    <string name="dropbox_access_key">"ACCESS_KEY"</string>
    <string name="dropbox_access_secret">"ACCES_SECRET"</string>

    <!-- Settings -->
    <string name="title_activity_settings">Configuración</string>
    <string name="title_activity_dropbox_chooser">Sel. directorio dropbox</string>
    <string name="title_activity_todoist_chooser">Sel. proyecto todoist</string>
    <string name="folder_select">Usar</string>
    <string name="up">Arriba</string>
    <string name="pref_student_settings_title">Config. de alumno</string>
    <string name="pref_server_settings_title">Config. de servidor de webservice</string>
    <string name="pref_dropbox_settings_title">Config. de Dropbox</string>
    <string name="pref_clear_dropbox_title">Borrar cuenta de dropbox</string>
    <string name="pref_todoist_settings_title">Config. de Todoist</string>
    <string name="pref_clear_todoist_title">Borrar cuenta de Todoist</string>
    <string name="not_set">Sin definir</string>
    <string name="pref_student_id">student_id</string>
 <!-- (matricula) -->
    <string name="pref_student_name">student_name</string>
    <string name="pref_student_career">student_career</string>
    <string name="pref_server_url">server_url</string>
    <string name="pref_server_get_exercise">server_get_exercise</string>
    <string name="pref_server_send_exercise">server_send_exercise</string>
    <string name="pref_dropbox_dir">dropbox_dir</string>
    <string name="pref_student_id_title">Matrícula</string>
    <string name="pref_student_name_title">Nombre</string>
    <string name="pref_student_career_title">Carrera</string>
    <string name="pref_server_url_title">Dirección del web service</string>
    <string name="pref_server_get_exercise_title">Método API para obtener ejercicio</string>
    <string name="pref_server_send_exercise_title">Método API para enviar respuesta de ejercicio</string>
    <string name="pref_dropbox_dir_title">Directorio de dropbox</string>
    <string name="sentences">Sentencias</string>
    <string name="date_description">Fecha agendada:</string>
    <string name="pref_clear_dropbox">clear_dopbox</string>
    <string name="pref_clear_todoist">clear_todoist</string>
    
    <string name="pref_todoist_token">todoist_token</string>
    <string name="pref_todoist_project_id">todoist_project_id</string>
    <string name="pref_todoist_project_name">todoist_project_name</string>
    <string name="label_description">Titulo:</string>

</resources>