<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment" >

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/tv_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/exercise_item_horizontal_margin"
        android:layout_marginTop="18dp"
        android:text="@string/exercise"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_exercise_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_exercise"
        android:layout_alignBottom="@+id/tv_exercise"
        android:layout_toRightOf="@+id/tv_exercise"
        android:paddingLeft="12dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_exercise_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_exercise"
        android:layout_below="@+id/tv_exercise"
        android:layout_marginRight="@dimen/exercise_item_horizontal_margin"
        android:layout_marginTop="30dp"
        android:text="@string/exercise_dummy_description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" 
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_start_exercise"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/exercise_item_horizontal_margin"
            android:layout_marginRight="@dimen/exercise_item_horizontal_margin"
            android:layout_weight="1"
            android:text="@string/start" />
        
        <Button
            android:id="@+id/btn_schedule_exercise"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/exercise_item_horizontal_margin"
            android:layout_marginRight="@dimen/exercise_item_horizontal_margin"
            android:layout_weight="1"
            android:text="@string/schedule" />
    </LinearLayout>

</RelativeLayout>